renders all toys, can create a toy, pessimistically renders, likes work on refresh. working on edit toy form and delete

--- a/index.css
+++ b/index.css
@@ -19,6 +19,13 @@ body {
 
 #toy-collection {
   margin: 2rem;
+  content: center;
+}
+
+
+#toy-container {
+  margin: 2rem;
+  justify-content: center;
 }
 
 .card {
